# covid-json-search-engine

./: AVLTree.h  CMakeLists.txt  DSHashtable.h  DSString.cpp  DSString.h  DSVector.h  IndexEntry.cpp  IndexEntry.h  IndexHandler.cpp  IndexHandler.h  PaperWordEntry.cpp  PaperWordEntry.h  Query.cpp  Query.h  docudata.cpp  docudata.h  main.cpp  parser.cpp  parser.h
